# heystac-frontend

./: .gitignore  .gitmodules  Cargo.toml  README-python.md  README.md  config.toml  heystac.toml  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yaml  cli.yaml  pages.yaml
.husky/: pre-commit
app/: actions.tsx  catalog.json  header.tsx  layout.js  layout.tsx  navbar.tsx  open-sans.css  page.js  page.tsx  provider.tsx  stac  stac-types.tsx  stac.tsx
app/catalog/[id]/: page.tsx
app/catalogs/[id]/: page.js  page.tsx
app/components/: api-status.tsx  buttons.tsx  collecticons.ts  color-mode-toggle.tsx  icons.tsx  links.tsx  map.tsx  navbar.js  navbar.tsx  stars.tsx  status-checker.tsx  status.tsx  theme-provider.js  typography.js  typography.ts
app/components/card/: base.js  base.tsx  catalog.js  catalog.tsx
app/components/chakra/: provider.tsx  theme.ts
app/components/chakra-ui/: alert.tsx  avatar.tsx  blockquote.tsx  checkbox-card.tsx  clipboard.tsx  empty-state.tsx  field.tsx  file-button.tsx  hover-card.tsx  menu.tsx  native-select.tsx  password-input.tsx  provider.tsx  radio-card.tsx  radio.tsx  segmented-control.tsx  select.tsx  skeleton.tsx  slider.tsx  stat.tsx  stepper-input.tsx  switch.tsx  tag.tsx  theme.ts  toggle-tip.tsx
app/components/pages/: catalog.js  catalog.tsx  collections.tsx
app/components/styles/: color-palette.ts  theme.ts  ui-theme.ts
app/rules/: page.tsx
app/types/: Stac.ts
components/: stars.tsx
crawl/: crawl.json  earth-search-aws.json  microsoft-pc.json  usgs-landsat.json
public/stac/: catalog.json
public/stac/earth-search-aws/: catalog.json
public/stac/microsoft-pc/: catalog.json
scripts/: setup  test
src/: args.rs  config.rs  crawl.rs  lib.rs  main.rs
src/heystac/: __init__.py  catalog.py  cli.py  client.py  collection.py  config.py  item.py  items.py  link.py  node.py  provider.py  rate.py  rule.py  rules.py  stac_object.py
stac/: catalog.json
stac/earth-search-aws/: catalog.json
stac/microsoft-pc/: catalog.json
stac/usgs-landsat/: catalog.json
(+563 files in other folders)
