[project]
name = "heystac"
version = "0.0.0"
description = "Command-line interface (CLI) for heystac"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "tqdm>=4.67.0",
]

[project.scripts]
heystac = "heystac:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.3",
    "stacrs-cli>=0.4.0",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.66.0.20240417",
]

[tool.mypy]
plugins = "pydantic.mypy"
