[project]
name = "heystac"
version = "0.0.0"
description = "Command-line interface (CLI) for heystac"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.2",
    "jsonschema>=4.23.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "pystac[validation]>=1.11.0",
    "shapely>=2.0.6",
    "tabulate>=0.9.0",
    "tqdm>=4.67.0",
]

[project.scripts]
heystac = "heystac.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "types-requests>=2.32.0.20241016",
    "types-tabulate>=0.9.0.20240106",
    "types-tqdm>=4.66.0.20240417",
]

[tool.mypy]
strict = true
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "shapely"
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I"]
